--- a/jfreereport/source/org/jfree/report/modules/factories/data/sql/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/factories/data/sql/configuration.properties
@@ -13,3 +13,7 @@ org.jfree.report.modules.factories.data.sql.connection-factory-prefix.built-in.d
 
 org.jfree.report.modules.factories.data.sql.connection-factories.namespace.sql=http://jfreereport.sourceforge.net/namespaces/datasources/sql
 org.jfree.report.modules.factories.data.sql.connection-factories.tag.sql.connection=org.jfree.report.modules.factories.data.sql.DriverConnectionReadHandler
+
+org.jfree.report.modules.factories.data.data-factory-prefix.built-in.sql=org.jfree.report.modules.factories.data.sql.data-factory.
+org.jfree.report.modules.factories.data.sql.data-factory.namespace.static=http://jfreereport.sourceforge.net/namespaces/datasources/sql
+org.jfree.report.modules.factories.data.sql.data-factory.tag.static.static-datasource=org.jfree.report.modules.factories.data.sql.SQLDataFactoryReadHandler
