--- a/jfreereport/source/org/jfree/report/modules/factories/report/flow/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/factories/report/flow/configuration.properties
@@ -32,3 +32,7 @@ org.jfree.report.modules.factories.report.node-factories.tag.flow.page-header=or
 org.jfree.report.modules.factories.report.node-factories.tag.flow.page-footer=org.jfree.report.modules.factories.report.flow.PageFooterReadHandler
 org.jfree.report.modules.factories.report.node-factories.tag.flow.group=org.jfree.report.modules.factories.report.flow.GroupReadHandler
 org.jfree.report.modules.factories.report.node-factories.tag.flow.sub-report=org.jfree.report.modules.factories.report.flow.SubReportReadHandler
+
+org.jfree.report.modules.factories.data.data-factory-prefix.built-in.flow=org.jfree.report.modules.factories.report.data-factories.
+org.jfree.report.modules.factories.report.data-factories.namespace.ext=http://jfreereport.sourceforge.net/namespaces/reports/flow
+org.jfree.report.modules.factories.report.data-factories.tag.ext.data-factory=org.jfree.report.modules.factories.report.flow.DatasourceFactoryReadHandler
