Add of replace and substitute functions

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -72,6 +72,10 @@ org.jfree.formula.functions.text.Right.class=org.jfree.formula.function.text.Rig
 org.jfree.formula.functions.text.Right.description=org.jfree.formula.function.text.RightFunctionDescription
 org.jfree.formula.functions.text.UrlEncode.class=org.jfree.formula.function.text.URLEncodeFunction
 org.jfree.formula.functions.text.UrlEncode.description=org.jfree.formula.function.text.URLEncodeFunctionDescription
+org.jfree.formula.functions.text.Replace.class=org.jfree.formula.function.text.ReplaceFunction
+org.jfree.formula.functions.text.Replace.description=org.jfree.formula.function.text.ReplaceFunctionDescription
+org.jfree.formula.functions.text.Substitute.class=org.jfree.formula.function.text.SubstituteFunction
+org.jfree.formula.functions.text.Substitute.description=org.jfree.formula.function.text.SubstituteFunctionDescription
 
 ##
 # Information functions
