--- a/libloader/source/org/jfree/resourceloader/loader.properties
+++ b/libloader/source/org/jfree/resourceloader/loader.properties
@@ -2,12 +2,8 @@
 # The list of known storage handlers. These classes are responsible to get
 # the binary data into the system. They do not interpret that data in any
 # way.
-org.jfree.resourceloader.loader.file-url=org.jfree.resourceloader.loader.file.FileUrlResourceLoader
+org.jfree.resourceloader.loader.url=org.jfree.resourceloader.loader.URLResourceLoader
 org.jfree.resourceloader.loader.file=org.jfree.resourceloader.loader.file.FileResourceLoader
-org.jfree.resourceloader.loader.ftp=org.jfree.resourceloader.loader.ftp.FtpResourceLoader
-org.jfree.resourceloader.loader.jar=org.jfree.resourceloader.loader.jar.JarResourceLoader
-org.jfree.resourceloader.loader.http=org.jfree.resourceloader.loader.http.HttpResourceLoader
-org.jfree.resourceloader.loader.https=org.jfree.resourceloader.loader.http.HttpsResourceLoader
 org.jfree.resourceloader.loader.raw=org.jfree.resourceloader.loader.raw.RawResourceLoader
 org.jfree.resourceloader.loader.res=org.jfree.resourceloader.loader.resource.ClassloaderResourceLoader
 org.jfree.resourceloader.loader.zip=org.jfree.resourceloader.loader.ftp.FtpResourceLoader
