Add of DateDifFuntion and AbsFunction

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -21,6 +21,8 @@ org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
 # Date/Time functions
 org.jfree.formula.functions.datetime.Date.class=org.jfree.formula.function.datetime.DateFunction
 org.jfree.formula.functions.datetime.Date.description=org.jfree.formula.function.datetime.DateFunctionDescription
+org.jfree.formula.functions.datetime.DateDif.class=org.jfree.formula.function.datetime.DateDifFunction
+org.jfree.formula.functions.datetime.DateDif.description=org.jfree.formula.function.datetime.DateDifFunctionDescription
 
 ##
 # Logical functions
@@ -43,6 +45,8 @@ org.jfree.formula.functions.logical.Xor.description=org.jfree.formula.function.l
 # Mathematical functions
 org.jfree.formula.functions.math.Sum.class=org.jfree.formula.function.math.SumFunction
 org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math.SumFunctionDescription
+org.jfree.formula.functions.math.Abs.class=org.jfree.formula.function.math.AbsFunction
+org.jfree.formula.functions.math.Abs.description=org.jfree.formula.function.math.AbsFunctionDescription
 
 ##
 # Text functions
