--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -23,6 +23,10 @@ org.jfree.formula.functions.datetime.Date.class=org.jfree.formula.function.datet
 org.jfree.formula.functions.datetime.Date.description=org.jfree.formula.function.datetime.DateFunctionDescription
 org.jfree.formula.functions.datetime.DateDif.class=org.jfree.formula.function.datetime.DateDifFunction
 org.jfree.formula.functions.datetime.DateDif.description=org.jfree.formula.function.datetime.DateDifFunctionDescription
+org.jfree.formula.functions.datetime.Now.class=org.jfree.formula.function.datetime.NowFunction
+org.jfree.formula.functions.datetime.Now.description=org.jfree.formula.function.datetime.NowFunctionDescription
+org.jfree.formula.functions.datetime.Today.class=org.jfree.formula.function.datetime.TodayFunction
+org.jfree.formula.functions.datetime.Today.description=org.jfree.formula.function.datetime.TodayFunctionDescription
 
 ##
 # Logical functions
