Copyright updated; Version number raised

--- a/jfreereport-demo/sql/sampledata.properties
+++ b/jfreereport-demo/sql/sampledata.properties
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2007, Pentaho Corporation. All Rights Reserved.
+#
+
 #HSQL Database Engine
 #Tue Jan 09 15:39:42 CET 2007
 hsqldb.script_format=0
