--- a/jfreereport-demo/source/jcommon.properties
+++ b/jfreereport-demo/source/jcommon.properties
@@ -1,4 +1,8 @@
 #
+# Copyright (c) 2007, Pentaho Corporation. All Rights Reserved.
+#
+
+#
 # The minimum loglevel that is logged
 org.jfree.base.LogLevel=Debug
 
