- Better Date dealing - Add of DateTimeType and TimeType - Use of HSSFDateUtil from Apache POI Project - Add of DateValueFunction and TimeFunction (need to be fixed to corretly handle new types by the way)

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -14,6 +14,11 @@ org.jfree.base.LogLevel=Debug
 org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
 
 #
+# Used to convert serial date number to java Date using a 1904 date system
+# else using a 1900 date system
+# org.jfree.formula.datesystem.1904=true
+
+#
 # A list of all known functions.
 #
 
@@ -23,6 +28,10 @@ org.jfree.formula.functions.datetime.Date.class=org.jfree.formula.function.datet
 org.jfree.formula.functions.datetime.Date.description=org.jfree.formula.function.datetime.DateFunctionDescription
 org.jfree.formula.functions.datetime.DateDif.class=org.jfree.formula.function.datetime.DateDifFunction
 org.jfree.formula.functions.datetime.DateDif.description=org.jfree.formula.function.datetime.DateDifFunctionDescription
+org.jfree.formula.functions.datetime.Time.class=org.jfree.formula.function.datetime.TimeFunction
+org.jfree.formula.functions.datetime.Time.description=org.jfree.formula.function.datetime.TimeFunctionDescription
+org.jfree.formula.functions.datetime.DateValue.class=org.jfree.formula.function.datetime.DateValueFunction
+org.jfree.formula.functions.datetime.DateValue.description=org.jfree.formula.function.datetime.DateValueFunctionDescription
 org.jfree.formula.functions.datetime.Now.class=org.jfree.formula.function.datetime.NowFunction
 org.jfree.formula.functions.datetime.Now.description=org.jfree.formula.function.datetime.NowFunctionDescription
 org.jfree.formula.functions.datetime.Today.class=org.jfree.formula.function.datetime.TodayFunction
