add of initial testng targets

--- a/libformula/ant/build.properties
+++ b/libformula/ant/build.properties
@@ -27,6 +27,7 @@ build.source=1.2
 #
 libdir=lib
 junit-dir=lib
+testng-dir=lib/test
 
 #
 # If you specify a non-empty string, then dont forget the
