--- a/libformula/ant/build.xml
+++ b/libformula/ant/build.xml
@@ -25,6 +25,8 @@
                              classpath-id="core.Classpath"/>
     <fail unless="lib.jcommon.present"/>
 
+	<available property="jdk1.4+" classname="java.lang.CharSequence"/>
+	<available property="jdk1.5+" classname="java.lang.StringBuilder"/>
   </target>
 
   <!-- Compile the JCommon classes -->
@@ -56,6 +58,50 @@
                 resource-files-id="core.ResourceFiles"
                 classpath-id="core.Classpath">
     </build-core>
+  </target>
+	
+  <target name="fix-tests" description="Fix jdk 1.5 nature of test classes for compilation">
+		<property name="build.target" value="1.5"></property>
+		<property name="build.source" value="1.5"></property>
+  </target>
+	
+  <target name="compile-tests" depends="fix-tests,initialise" if="jdk1.5+">
+	<antcall target="compile" inheritall="false" inheritrefs="false"></antcall>
+	<property name="testng.libformula-jar-file" value="testng.${libformula-jar-file}"/>
+	
+	<path id="test.Classpath">
+	      <pathelement location="${libdir}/${jcommon-jar-file}"/>
+		  <pathelement location="${testng-dir}/testng-5.4-jdk15.jar"/>
+	      <pathelement location="${libformula-jar-file}"/>
+	</path>
+	
+	<fileset dir="test/" id="test.SourceFiles">
+	      <include name="**/*.java"/>
+	</fileset>
+	
+	<fileset dir="test/" id="test.ResourceFiles">
+	      <include name="**/*.properties"/>
+	</fileset>
+	
+	
+	<build-core target-jar="${testng.libformula-jar-file}"
+	                source-files-id="test.SourceFiles"
+	                resource-files-id="test.ResourceFiles"
+	                classpath-id="test.Classpath">
+   </build-core>
+	
+  </target>
+
+  <target name="tests" depends="compile-tests">
+     <taskdef resource="testngtasks"
+		         classpath="${testng-dir}/testng-5.4-jdk15.jar"/>
+		
+		<testng classpathref="test.Classpath"
+				outputDir="test-output/"
+				haltOnFailure="false" verbose="2">
+			<classpath location="${testng.libformula-jar-file}"></classpath>
+			<classfileset file="${testng.libformula-jar-file}" includes="**/*Test.class"></classfileset>
+		</testng>
   </target>
 
 
@@ -116,7 +162,7 @@
 
   </target>
 
-  <!-- Make .tar.gz distribution for libfonts -->
+  <!-- Make .tar.gz distribution for libformula -->
   <target name="targz" depends="compile">
 
     <make-targz lib.version="${libformula.version}"
