Fix: of some function descriptions and some minor function bugs Add: IsEvenFunction IsOddFunction IsNumberFunction IsRefFunction AverafeFunction

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -60,6 +60,8 @@ org.jfree.formula.functions.math.Sum.class=org.jfree.formula.function.math.SumFu
 org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math.SumFunctionDescription
 org.jfree.formula.functions.math.Abs.class=org.jfree.formula.function.math.AbsFunction
 org.jfree.formula.functions.math.Abs.description=org.jfree.formula.function.math.AbsFunctionDescription
+org.jfree.formula.functions.math.Average.class=org.jfree.formula.function.math.AverageFunction
+org.jfree.formula.functions.math.Average.description=org.jfree.formula.function.math.AverageFunctionDescription
 
 ##
 # Text functions
@@ -114,6 +116,14 @@ org.jfree.formula.functions.information.IsError.class=org.jfree.formula.function
 org.jfree.formula.functions.information.IsError.description=org.jfree.formula.function.information.IsErrorFunctionDescription
 org.jfree.formula.functions.information.Choose.class=org.jfree.formula.function.information.ChooseFunction
 org.jfree.formula.functions.information.Choose.description=org.jfree.formula.function.information.ChooseFunctionDescription
+org.jfree.formula.functions.information.IsRef.class=org.jfree.formula.function.information.IsRefFunction
+org.jfree.formula.functions.information.IsRef.description=org.jfree.formula.function.information.IsRefFunctionDescription
+org.jfree.formula.functions.information.IsNumber.class=org.jfree.formula.function.information.IsNumberFunction
+org.jfree.formula.functions.information.IsNumber.description=org.jfree.formula.function.information.IsNumberFunctionDescription
+org.jfree.formula.functions.information.IsOdd.class=org.jfree.formula.function.information.IsOddFunction
+org.jfree.formula.functions.information.IsOdd.description=org.jfree.formula.function.information.IsOddFunctionDescription
+org.jfree.formula.functions.information.IsEven.class=org.jfree.formula.function.information.IsEvenFunction
+org.jfree.formula.functions.information.IsEven.description=org.jfree.formula.function.information.IsEvenFunctionDescription
 
 org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
 org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
