Bug: AnyType working back, Add: rounding category, Add: configurable dateformats using the property file, the work is now done in the DefaultLocalizationContext insteady of the DefaultTypeRegistry (numberformats not yet modified)

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -6,17 +6,27 @@
 # Any configuration will happen here.
 
 #
-# The minimum loglevel that is logged
-org.jfree.base.LogLevel=Debug
-
-#
 # Where to log. Give a classname of a  valid LogTarget implementation.
 org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
+
+#
+# The minimum loglevel that is logged
+org.jfree.base.LogLevel=Debug
 
 #
 # Used to convert serial date number to java Date using a 1904 date system
 # else using a 1900 date system
 # org.jfree.formula.datesystem.1904=true
+
+#org.jfree.formula.locale = en_US
+#org.jfree.formula.timezone = America/Los_Angeles
+
+#org.jfree.formula.dateformat.date.fr_FR = YY-MM-DD
+#org.jfree.formula.dateformat.datetime.fr_FR = YY-MM-DD
+#org.jfree.formula.dateformat.time.fr_FR = YY-MM-DD
+
+#org.jfree.formula.numberformat.number.default =
+#org.jfree.formula.numberformat.currency.default = 
 
 #
 # A list of all known functions.
@@ -53,6 +63,12 @@ org.jfree.formula.functions.logical.True.class=org.jfree.formula.function.logica
 org.jfree.formula.functions.logical.True.description=org.jfree.formula.function.logical.TrueFunctionDescription
 org.jfree.formula.functions.logical.Xor.class=org.jfree.formula.function.logical.XorFunction
 org.jfree.formula.functions.logical.Xor.description=org.jfree.formula.function.logical.XorFunctionDescription
+
+##
+# Rounding functions
+org.jfree.formula.functions.rounding.Int.class=org.jfree.formula.function.rounding.IntFunction
+org.jfree.formula.functions.rounding.Int.description=org.jfree.formula.function.rounding.IntFunctionDescription
+
 
 ##
 # Mathematical functions
