Add: IsNonTextFunction and OddFunction, Add: OpenForumlaConformance test class to check if we reached openformula smallgroup function set

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -78,6 +78,8 @@ org.jfree.formula.functions.math.Abs.class=org.jfree.formula.function.math.AbsFu
 org.jfree.formula.functions.math.Abs.description=org.jfree.formula.function.math.AbsFunctionDescription
 org.jfree.formula.functions.math.Average.class=org.jfree.formula.function.math.AverageFunction
 org.jfree.formula.functions.math.Average.description=org.jfree.formula.function.math.AverageFunctionDescription
+org.jfree.formula.functions.math.Odd.class=org.jfree.formula.function.math.OddFunction
+org.jfree.formula.functions.math.Odd.description=org.jfree.formula.function.math.OddFunctionDescription
 
 ##
 # Text functions
@@ -140,6 +142,9 @@ org.jfree.formula.functions.information.IsOdd.class=org.jfree.formula.function.i
 org.jfree.formula.functions.information.IsOdd.description=org.jfree.formula.function.information.IsOddFunctionDescription
 org.jfree.formula.functions.information.IsEven.class=org.jfree.formula.function.information.IsEvenFunction
 org.jfree.formula.functions.information.IsEven.description=org.jfree.formula.function.information.IsEvenFunctionDescription
+org.jfree.formula.functions.information.IsNonText.class=org.jfree.formula.function.information.IsNonTextFunction
+org.jfree.formula.functions.information.IsNonText.description=org.jfree.formula.function.information.IsNonTextFunctionDescription
+
 
 org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
 org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
