--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -80,6 +80,8 @@ org.jfree.formula.functions.math.Average.class=org.jfree.formula.function.math.A
 org.jfree.formula.functions.math.Average.description=org.jfree.formula.function.math.AverageFunctionDescription
 org.jfree.formula.functions.math.Odd.class=org.jfree.formula.function.math.OddFunction
 org.jfree.formula.functions.math.Odd.description=org.jfree.formula.function.math.OddFunctionDescription
+org.jfree.formula.functions.math.Even.class=org.jfree.formula.function.math.EvenFunction
+org.jfree.formula.functions.math.Even.description=org.jfree.formula.function.math.EvenFunctionDescription
 
 ##
 # Text functions
