Add of DayFunction, HourFunction, MonthFunction, WeekDayFunction, YearFunction

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -46,6 +46,16 @@ org.jfree.formula.functions.datetime.Now.class=org.jfree.formula.function.dateti
 org.jfree.formula.functions.datetime.Now.description=org.jfree.formula.function.datetime.NowFunctionDescription
 org.jfree.formula.functions.datetime.Today.class=org.jfree.formula.function.datetime.TodayFunction
 org.jfree.formula.functions.datetime.Today.description=org.jfree.formula.function.datetime.TodayFunctionDescription
+org.jfree.formula.functions.datetime.Day.class=org.jfree.formula.function.datetime.DayFunction
+org.jfree.formula.functions.datetime.Day.description=org.jfree.formula.function.datetime.DayFunctionDescription
+org.jfree.formula.functions.datetime.Month.class=org.jfree.formula.function.datetime.MonthFunction
+org.jfree.formula.functions.datetime.Month.description=org.jfree.formula.function.datetime.MonthFunctionDescription
+org.jfree.formula.functions.datetime.Year.class=org.jfree.formula.function.datetime.YearFunction
+org.jfree.formula.functions.datetime.Year.description=org.jfree.formula.function.datetime.YearFunctionDescription
+org.jfree.formula.functions.datetime.WeekDay.class=org.jfree.formula.function.datetime.WeekDayFunction
+org.jfree.formula.functions.datetime.WeekDay.description=org.jfree.formula.function.datetime.WeekDayFunctionDescription
+org.jfree.formula.functions.datetime.Hour.class=org.jfree.formula.function.datetime.HourFunction
+org.jfree.formula.functions.datetime.Hour.description=org.jfree.formula.function.datetime.HourFunctionDescription
 
 ##
 # Logical functions
