Rewrite of the data-source handling. Now there is a state 'BEFORE_FIRST_ROW' to handle empty rowsets more cleanly

--- a/jfreereport/source/org/jfree/report/modules/gui/swing/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/swing/pdf/configuration.properties
@@ -1,4 +1,4 @@
-org.jfree.report.modules.gui.swing.actions.export.pdf=org.jfree.report.modules.gui.swing.pdf.PdfExportActonPlugin
+org.jfree.report.modules.gui.swing.actions.export.pdf=org.jfree.report.modules.gui.swing.pdf.PdfExportActionPlugin
 
 org.jfree.report.modules.gui.swing.pdf.export.add-to-menu=true
 org.jfree.report.modules.gui.swing.pdf.export.add-to-toolbar=false
