Moved the ant file into the project root

--- a/libxml/build.properties
+++ b/libxml/build.properties
@@ -17,6 +17,9 @@ build.deprecation=true
 build.target=1.2
 build.source=1.2
 
+# You probably want to override this in your local build setup file
+build.retro.jdk=/opt/jdk1.2.2
+
 #
 # All path settings are relative to the project root directory
 # (..)
