Final build file fixes

--- a/libxml/build.properties
+++ b/libxml/build.properties
@@ -41,6 +41,7 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 jcommon-jar-file=jcommon-1.0.10.jar
 libloader-jar-file=libloader-0.3.4.jar
+jaxp-jar-file=gnujaxp.jar
 
 ##############################################################
 #
