--- a/libxml/build.xml
+++ b/libxml/build.xml
@@ -1,14 +1,13 @@
 <!-- An ANT build file for libfonts. -->
 
-<!-- Written by David Gilbert and modified for libFonts by Thomas Morgner. -->
-<!-- 09-Nov-2005 -->
+<!-- Written by David Gilbert and modified for LibXML by Thomas Morgner. -->
 
 <!-- This script has been tested with Ant version 1.6.2. -->
 
 <!-- Several temporary directories are created while the script is -->
-<!-- running: "../build" and "../distribution".  -->
+<!-- running: "./build" and "./distribution".  -->
 
-<!-- A "../javadoc" directory will be created for the Javadoc -->
+<!-- A "./javadoc" directory will be created for the Javadoc -->
 <!-- HTML pages. -->
 
 <!-- The script should work for the distribution and also the CVS -->
@@ -18,8 +17,6 @@
 
   <import file="ant/build-lib.xml"/>
 
-
-  <!-- Initialisation. -->
   <target name="initialise" description="Initialise required settings.">
     <tstamp/>
 
@@ -54,13 +51,12 @@
                  jdk-dir="${build.retro.jdk}">
       <all-classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${jaxp-jar-file}"/>
         <pathelement location="${libdir}/${libloader-jar-file}"/>
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
         <include name="**/*.properties"/>
-        <include name="*.css"/>
-        <include name="**/*.css"/>
       </all-resources>
     </build-retro>
   </target>
@@ -73,6 +69,7 @@
       <all-classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
         <pathelement location="${libdir}/${libloader-jar-file}"/>
+        <pathelement location="${libdir}/${jaxp-jar-file}"/>
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
@@ -83,13 +80,11 @@
     </build-all>
   </target>
 
-  <!-- Generate the libfonts JavaDoc HTML pages -->
   <target name="javadoc" depends="initialise">
     <delete dir="javadoc"/>
     <mkdir dir="javadoc"/>
     <javadoc destdir="javadoc"
-      windowtitle="libxml Class Library (version ${libxml.version})"
-      overview="source/overview.html"
+      windowtitle="LibXML Class Library (version ${libxml.version})"
       linksource="true">
       <classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
@@ -103,12 +98,12 @@
 
   <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README"
-      tofile="distribution/README"/>
+    <copy file="README.txt"
+      tofile="distribution/README.txt"/>
 
     <!-- copy across the ChangeLog -->
-    <copy file="ChangeLog"
-      tofile="distribution/ChangeLog"/>
+    <copy file="ChangeLog.txt"
+      tofile="distribution/ChangeLog.txt"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
@@ -129,27 +124,24 @@
     </copy>
 
     <!-- copy across ant build file (this file) -->
-    <copy file="ant/build.xml"
-      tofile="distribution/ant/build.xml" failonerror="false"/>
+    <copy file="build.xml"
+      tofile="distribution/build.xml"/>
     <copy file="ant/build-lib.xml"
       tofile="distribution/ant/build-lib.xml"/>
 
-    <copy file="ant/build.properties"
-      tofile="distribution/ant/build.properties"/>
+    <copy file="build.properties"
+      tofile="distribution/build.properties"/>
 
   </target>
 
-  <!-- Make .zip distribution for libfonts -->
   <target name="zip" depends="compile">
     <make-zip lib.version="${libxml.version}" lib.name="${libxml.name}"/>
   </target>
 
-  <!-- Make .tar.gz distribution for libfonts -->
   <target name="targz" depends="compile">
     <make-targz lib.version="${libxml.version}" lib.name="${libxml.name}"/>
   </target>
 
-  <!-- ALL -->
   <target name="all"
     depends="compile,javadoc,zip,targz"
     description="Compiles Libfonts, builds the jar files, generates the Javadoc HTML pages and creates distribution files (.zip and .tar.gz).">
