--- a/libfonts/build.properties
+++ b/libfonts/build.properties
@@ -16,6 +16,7 @@ build.deprecation=true
 # Make sure that JDK 1.2 compatible class files are generated
 build.target=1.2
 build.source=1.2
+build.retro.jdk=/opt/jdk1.2.2
 
 #
 # All path settings are relative to the project root directory
