--- a/libfonts/build.xml
+++ b/libfonts/build.xml
@@ -14,18 +14,17 @@
 <!-- The script should work for the distribution and also the CVS -->
 <!-- repository. -->
 
-<project name="libfonts" default="all" basedir="..">
+<project name="libfonts" default="all" basedir=".">
 
-  <import file="build-lib.xml"/>
+  <import file="ant/build-lib.xml"/>
 
   <!-- Initialisation. -->
-  <target name="initialise" description="Initialise required settings.">
+  <target name="initialise">
     <tstamp/>
 
     <property name="builddir" value="build"/>
-
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <property file="${antfile.dir}/build.properties"/>
+    <property file="${user.home}/.build-pentaho-reporting-libfonts.properties"/>
+    <property file="build.properties"/>
 
     <isClassAndFileAvailable class-name="org.jfree.JCommon"
                              property-name="lib.jcommon.present"
@@ -61,8 +60,29 @@
     </build-all>
   </target>
 
-  <!-- Generate the libfonts JavaDoc HTML pages -->
+  <target name="compile-retro" depends="initialise"
+    description="Compile the libFonts source code.">
+
+    <build-retro target-jar="${libfonts-jar-file}"
+               source-dir="source"
+               jdk-dir="${build.retro.jdk}">
+      <all-classpath>
+        <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${libloader-jar-file}"/>
+      </all-classpath>
+      <all-resources>
+        <include name="**/*.properties"/>
+        <include name="*.properties"/>
+        <include name="**/*.ser"/>
+        <include name="*.ser"/>
+      </all-resources>
+    </build-retro>
+  </target>
+
   <target name="javadoc" depends="initialise">
+    <description>
+      Generate the libfonts JavaDoc HTML pages
+    </description>
     <delete dir="javadoc"/>
     <mkdir dir="javadoc"/>
     <javadoc destdir="javadoc"
@@ -82,8 +102,10 @@
 
   <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README"
-      tofile="distribution/README"/>
+    <copy file="README.txt"
+      tofile="distribution/README.txt"/>
+    <copy file="ChangeLog.txt"
+      tofile="distribution/ChangeLog.txt"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
@@ -107,26 +129,33 @@
     </copy>
 
     <!-- copy across ant build file (this file) -->
-    <copy file="ant/build.xml"
-      tofile="distribution/ant/build.xml"/>
+    <copy file="build.xml"
+      tofile="distribution/build.xml"/>
     <copy file="ant/build-lib.xml"
       tofile="distribution/ant/build-lib.xml"/>
 
-    <copy file="ant/build.properties"
-      tofile="distribution/ant/build.properties"/>
+    <copy file="build.properties"
+      tofile="distribution/build.properties"/>
   </target>
 
-  <!-- Make .zip distribution for libfonts -->
   <target name="zip" depends="compile">
+    <description>
+      Make .zip distribution for libfonts
+    </description>
     <make-zip lib.version="${libfonts.version}" lib.name="${libfonts.name}"/>
   </target>
 
-  <!-- Make .tar.gz distribution for libfonts -->
   <target name="targz" depends="compile">
+    <description>
+      Make .tar.gz distribution for libfonts
+    </description>
     <make-targz lib.version="${libfonts.version}" lib.name="${libfonts.name}"/>
   </target>
 
   <target name="maven-bundle" depends="compile" >
+    <description>
+      Make a Maven-Bundle jar for LibFonts.
+    </description>
     <make-maven-bundle lib.version="${libfonts.version}"
                        lib.name="${libfonts.name}"
                        lib.file="${libfonts-jar-file}"
