--- a/jfreereport/build.properties
+++ b/jfreereport/build.properties
@@ -4,8 +4,8 @@
 ###########################################################
 #
 #  Global settings ...
-jfreereport.name=jfreereport
-jfreereport.version=0.9.0-05
+pref.name=pentaho-reporting-engine-flow
+pref.version=0.9.1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -19,6 +19,7 @@ build.deprecation=true
 # Make sure that JDK 1.2 compatible class files are generated
 build.target=1.2
 build.source=1.2
+build.retro.jdk=1.2
 
 #
 # All path settings are relative to the project root directory
@@ -43,8 +44,8 @@ jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
 libfonts-jar-file=liblayout-0.2.6.jar
 liblayout-jar-file=libfonts-0.2.6.jar
 libloader-jar-file=libloader-0.3.4.jar
-libxml-jar-file=libxml-0.9.5.jar
-libformula-jar-file=libformula-0.1.8.jar
+libxml-jar-file=libxml-0.9.6.jar
+libformula-jar-file=libformula-0.1.9.jar
 librepository-jar-file=librepository-0.1.1.jar
 flute-jar-file=flute-1.3-jfree-20061107.jar
 
@@ -64,8 +65,8 @@ itext-jar-file=itext-1.4.jar
 ##############################################################
 #
 # Generated files ...
-jfreereport-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
-jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-demo-${jfreereport.version}.jar
-jfreereport-bundle-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-bundle.jar
+pref-jar-file=${targetdir}${pref.name}-${pref.version}.jar
+pref-demo-jar-file=${targetdir}${pref.name}-demo-${pref.version}.jar
+pref-bundle-jar-file=${targetdir}${pref.name}-${pref.version}-bundle.jar
 
-jfreereport-core-jar-file=${targetdir}${jfreereport.name}-core-${jfreereport.version}.jar
+pref-core-jar-file=${targetdir}${pref.name}-core-${pref.version}.jar
