--- a/jfreereport/build.properties
+++ b/jfreereport/build.properties
@@ -1,5 +1,5 @@
 #
-# JFreeReport ant build properties ...
+# Pentaho Reporting Flow Engine ant build properties ...
 
 ###########################################################
 #
