Normalized build-files

--- a/jfreereport-demo/build.properties
+++ b/jfreereport-demo/build.properties
@@ -8,8 +8,8 @@
 ###########################################################
 #
 #  Global settings ...
-jfreereport.name=jfreereport-demo
-jfreereport.version=0.9.0-05
+pref.name=pentaho-reporting-flow-engine-demo
+pref.version=0.9.0-05
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -69,4 +69,4 @@ itext-jar-file=itext-1.4.jar
 ##############################################################
 #
 # Generated files ...
-jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
+pref-demo-jar-file=${targetdir}${pref.name}-${pref.version}.jar
