--- a/jfreereport-demo/build.xml
+++ b/jfreereport-demo/build.xml
@@ -18,9 +18,9 @@
 <!-- The script should work for the distribution and also the CVS -->
 <!-- repository. -->
 
-<project name="jfreereport" default="all" basedir="..">
+<project name="jfreereport" default="all" basedir=".">
 
-  <import file="build-lib.xml"/>
+  <import file="ant/build-lib.xml"/>
 
   <!-- Initialisation. -->
   <target name="initialise" description="Initialise required settings.">
@@ -28,8 +28,7 @@
 
     <property name="builddir" value="build"/>
 
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <property file="ant/build.properties"/>
+    <property file="build.properties"/>
 
     <isClassAndFileAvailable class-name="org.jfree.JCommon"
                              property-name="lib.jcommon.present"
@@ -40,7 +39,7 @@
   <!-- Compile the libfonts classes -->
   <target name="compile" depends="initialise">
 
-    <build-all target-jar="${jfreereport-demo-jar-file}"
+    <build-all target-jar="${pref-demo-jar-file}"
                source-dir="source">
       <all-classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
@@ -94,7 +93,7 @@
     <delete dir="javadoc"/>
     <mkdir dir="javadoc"/>
     <javadoc destdir="javadoc"
-      windowtitle="JFreeReport (version ${jfreereport.version})"
+      windowtitle="JFreeReport (version ${pref.version})"
       overview="source/overview.html"
       linksource="true">
       <classpath>
@@ -119,20 +118,20 @@
 
   <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README"
-      tofile="distribution/README"/>
+    <copy file="README.txt"
+      tofile="distribution/README.txt"/>
 
     <!-- copy across LICENCE -->
-    <copy file="ChangeLog"
-      tofile="distribution/ChangeLog"/>
+    <copy file="ChangeLog.txt"
+      tofile="distribution/ChangeLog.txt"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
       tofile="distribution/licence-LGPL.txt"/>
 
     <!-- copy across runtime jar file -->
-    <copy file="${jfreereport-demo-jar-file}"
-      tofile="distribution/${jfreereport-demo-jar-file}"/>
+    <copy file="${pref-demo-jar-file}"
+      tofile="distribution/${pref-demo-jar-file}"/>
 
     <!-- copy across source files -->
     <copy todir="distribution/source">
@@ -150,23 +149,23 @@
     </copy>
 
     <!-- copy across ant build file (this file) -->
-    <copy file="ant/build.xml"
-      tofile="distribution/ant/build.xml" failonerror="false"/>
+    <copy file="build.xml"
+      tofile="distribution/build.xml"/>
     <copy file="ant/build-lib.xml"
       tofile="distribution/ant/build-lib.xml"/>
 
-    <copy file="ant/build.properties"
-      tofile="distribution/ant/build.properties"/>
+    <copy file="build.properties"
+      tofile="distribution/build.properties"/>
   </target>
 
   <!-- Make .zip distribution for libfonts -->
   <target name="zip" depends="compile">
-    <make-zip lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
+    <make-zip lib.version="${pref.version}" lib.name="${pref.name}"/>
   </target>
 
   <!-- Make .tar.gz distribution for libfonts -->
   <target name="targz" depends="compile">
-    <make-targz lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
+    <make-targz lib.version="${pref.version}" lib.name="${pref.name}"/>
   </target>
 
 
